# spike-etl

./: Cargo.toml
events/happy_path/: bank_transaction_issued.json  payment_authorized.json  payment_collected.json  product_ordered.json
src/: event_handler.rs  events.rs  lib.rs  main.rs  pool.rs  reconciliation_engine.rs
src/projectors/: mod.rs  total_authorized_projector.rs  total_collected_projector.rs  total_ordered_projector.rs
