[package]
name = "spike-costacando"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
chrono = "0.4.23"
lazy_static = "1.4.0"
once_cell = "1.17.1"
postgres = "0.19.4"
r2d2_postgres = "0.18.1"
rand = "0.8.5"
sqlite = "0.30.4"
